--- a/[Prototype] EFRI Data Analysis LDA.ipynb
+++ b/[Prototype] EFRI Data Analysis LDA.ipynb
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 134,
    "id": "ce65b555",
    "metadata": {},
    "outputs": [],
@@ -589,11 +589,12 @@
     "\n",
     "        self.__num_trials, self.__num_channels, self.__num_freqs, self.__num_timesteps = data.shape\n",
     "\n",
-    "        if not(self.__num_timesteps % kwargs['time_resolution'] == 0):\n",
-    "            raise Exception(\"Invalid time resolution size, num_timesteps % resolution must equal 0\")\n",
-    "        else:\n",
-    "            self.__time_resolution = kwargs['time_resolution']\n",
-    "            self.__rescaled_timesteps = int(self.__num_timesteps/kwargs['time_resolution'])\n",
+    "        if 'time_resolution' in kwargs:\n",
+    "            if not(self.__num_timesteps % kwargs['time_resolution'] == 0):\n",
+    "                raise Exception(\"Invalid time resolution size, num_timesteps % resolution must equal 0\")\n",
+    "            else:\n",
+    "                self.__time_resolution = kwargs['time_resolution']\n",
+    "                self.__rescaled_timesteps = int(self.__num_timesteps/kwargs['time_resolution'])\n",
     "\n",
     "    def _filter_channels(self):\n",
     "        self._filtered_elec_areas_idxs = [i for i,ea in enumerate(self.__elec_areas) if ea not in ['white matter','CZ','PZ', 'out','FZ','cerebrospinal fluid','lesion L','ventricle L','ventricle R']]\n",
@@ -788,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 150,
    "id": "70bd9c66",
    "metadata": {},
    "outputs": [],
@@ -798,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 144,
    "id": "ded340a1",
    "metadata": {},
    "outputs": [],
@@ -808,12 +809,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 137,
+   "id": "b241fa98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6756756756756757"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lda.mean_scores.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "e4072ea7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5520422678317416"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lda.mean_scores.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
    "id": "f0d305ee",
    "metadata": {},
    "outputs": [],
    "source": [
     "lda.train_on_all_channels(f_band_data, y, setup_data=setup_data, time_resolution= 5, filter_channels= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "25169e88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6108108108108108"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lda.mean_scores.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "5642b34b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5256756756756757"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lda.mean_scores.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "ee1c8bde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lda.train_on_all_timesteps(f_band_data,y,setup_data=setup_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "3f3fe11a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6216216216216217"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lda.mean_scores.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "5a34e87e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5135541556594188"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lda.mean_scores.mean()"
    ]
   },
   {
