add collective predictions

--- a/[Prototype] EFRI Data Analysis LDA.ipynb
+++ b/[Prototype] EFRI Data Analysis LDA.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "54340c22",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "9bc2f496",
    "metadata": {},
    "outputs": [],
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 199,
    "id": "ce65b555",
    "metadata": {},
    "outputs": [],
@@ -676,6 +676,7 @@
     "    \n",
     "    def _time_window_grid_search(self, data, y, channels):\n",
     "        \"\"\"Train LDA model on all possible time windows, store the time windows that correspond with the highest LDA score.\"\"\"\n",
+    "        self._set_attributes(data)\n",
     "        time_windows = self._create_time_windows()\n",
     "        best_time_windows = []\n",
     "\n",
@@ -685,7 +686,7 @@
     "                self._train(X,y)\n",
     "\n",
     "            print(f'Channel {channel} done')\n",
-    "            best_time_windows.append([channel, time_windows[np.argmax(self.mean_scores)]])\n",
+    "            best_time_windows.append([channel, time_windows[np.argmax(self.mean_scores)], np.max(self.mean_scores)])\n",
     "            self._reset_attributes()\n",
     "        \n",
     "        return best_time_windows\n",
@@ -694,6 +695,10 @@
     "        \"\"\"Train LDA model on specified X data and y labels\"\"\"\n",
     "        low_bet_avg_powers = X[np.where(y == 0)].mean(0)\n",
     "        high_bet_avg_powers = X[np.where(y == 1)].mean(0)\n",
+    "\n",
+    "        # self.high_bet_avg_powers = np.append(self.high_bet_avg_powers, high_bet_avg_powers)\n",
+    "        # self.low_bet_avg_powers = np.append(self.low_bet_avg_powers, low_bet_avg_powers)\n",
+    "        # self.diff_avg_powers = np.append(self.diff_avg_powers, high_bet_avg_powers - low_bet_avg_powers)\n",
     "\n",
     "        self.high_bet_avg_powers.append(high_bet_avg_powers)\n",
     "        self.low_bet_avg_powers.append(low_bet_avg_powers)\n",
@@ -713,6 +718,12 @@
     "            scores.append(lda.score(X[test], y[test]))\n",
     "            dval[test] = np.dot(X[test], lda.coef_.T).T[0] + lda.intercept_\n",
     "\n",
+    "        # self.dvals = np.append(self.dvals, dval)\n",
+    "        # self.lda_coefs = np.append(self.lda_coefs, estimators[scores.index(max(scores))].coef_[0])\n",
+    "        # self.mean_scores = np.append(self.mean_scores, np.mean(scores))\n",
+    "\n",
+    "        # self.std_scores = np.append(self.std_scores, np.std(scores))\n",
+    "\n",
     "        self.dvals.append(dval)\n",
     "        self.lda_coefs.append(estimators[scores.index(max(scores))].coef_[0])\n",
     "        self.mean_scores.append(np.mean(scores))\n",
@@ -720,8 +731,12 @@
     "        self.std_scores.append(np.std(scores))\n",
     "\n",
     "        t_stat, p_val = ttest_1samp(dval, popmean=0) # perform 1-sided t-test on decision values corresponding to high bet\n",
+    "        \n",
     "        self.t_stats.append(t_stat)\n",
-    "        self.p_vals.append(p_val)        \n",
+    "        self.p_vals.append(p_val)\n",
+    "\n",
+    "        # self.t_stats = np.append(self.t_stats, t_stat)\n",
+    "        # self.p_vals = np.append(self.p_vals, p_val)        \n",
     "\n",
     "    def create_cluster_idxs(self, threshold):\n",
     "        \"\"\"Creates statistical clusters based on the t-statistics computed from LDA decision values\"\"\"\n",
@@ -763,20 +778,22 @@
     "        \n",
     "        return t_stat_sums\n",
     "\n",
-    "    def train_on_optimal_time_windows(self, data, y, n_processes):\n",
+    "    def train_on_optimal_time_windows(self, data, y, n_processes, n_channels=self.__num_channels):\n",
     "        \"\"\"Train LDA model on the optimal time windows for each channel\"\"\"\n",
     "        self._set_attributes(data)\n",
     "        results = self._multiprocessing_time_window_grid_search(data, y, n_processes)\n",
     "\n",
     "        # Unravel the results from the multiprocessing and sort them by channels\n",
     "        optimal_time_windows = [item for sublist in results for item in sublist]\n",
-    "        optimal_time_windows.sort(key=lambda x: x[0])\n",
+    "        optimal_time_windows.sort(key=lambda x: x[2])\n",
     "\n",
-    "        for channel, times in optimal_time_windows:\n",
+    "        # return optimal_time_windows\n",
+    "\n",
+    "        for channel, times, _ in optimal_time_windows[::-1][:n_channels]:\n",
     "            X = self._create_X(data, channel, times)\n",
     "            self._train(X,y)\n",
     "        \n",
-    "        self._reshape_attributes((self.__num_channels,-1))\n",
+    "        self._reshape_attributes((n_channels,-1))\n",
     "\n",
     "\n",
     "    def train_per_channel_and_timestep(self, data, y, time_resolution):\n",
@@ -903,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 200,
    "id": "70bd9c66",
    "metadata": {},
    "outputs": [],
@@ -913,279 +930,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "id": "ff423b7f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_sampled_channels(channels, sample_size, sampled_channels_=[]):\n",
-    "    \"\"\"Recursively generate a list (size = sample_size) of lists of sampled channels\"\"\"\n",
-    "    np.random.seed()\n",
-    "\n",
-    "    if len(channels) > sample_size:\n",
-    "        sample = np.random.choice(channels, size=sample_size, replace=False)\n",
-    "        sampled_channels_.append(list(sample))\n",
-    "        channels = np.delete(channels, np.where(np.isin(channels, sample))[0])\n",
-    "        generate_sampled_channels(channels, sample_size, sampled_channels_)\n",
-    "    else:\n",
-    "        sampled_channels_.append(list(channels))\n",
-    "\n",
-    "    return sampled_channels_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 177,
-   "id": "26300746",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def multiprocessing_time_window_grid_search(LDA:LDA, n_processes, data, y):\n",
-    "    \"\"\"Perform a time window grid search in parallel\"\"\"\n",
-    "    from multiprocessing import Pool\n",
-    "\n",
-    "    LDA._set_attributes(data)\n",
-    "\n",
-    "    channels = np.arange(LDA.num_channels)\n",
-    "    sample_size = round(len(channels)/n_processes)\n",
-    "\n",
-    "    sampled_channels = generate_sampled_channels(channels, sample_size, [])\n",
-    "    print(sampled_channels)\n",
-    "\n",
-    "    if __name__ == '__main__':\n",
-    "        with Pool(n_processes) as p:\n",
-    "            results = p.starmap(LDA.time_window_grid_search, [(data, y, channels) for channels in sampled_channels])\n",
-    "            p.close()\n",
-    "\n",
-    "    return results\n",
-    "    \n",
-    "    # unraveled_results = [item for sublist in results for item in sublist]\n",
-    "\n",
-    "    # return unraveled_results.sort(key=lambda x: x[0])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "17639a06",
+   "execution_count": 201,
+   "id": "9adaa49a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Channel 74 done\n",
       "Channel 26 done\n",
-      "Channel 8 done\n",
-      "Channel 84 done\n",
-      "Channel 56 done\n",
-      "Channel 81 done\n",
-      "Channel 16 done\n",
-      "Channel 108 done\n",
-      "Channel 113 done\n",
-      "Channel 21 done\n",
-      "Channel 80 done\n",
-      "Channel 40 done\n",
-      "Channel 73 done\n",
-      "Channel 105 done\n",
-      "Channel 128 done\n",
-      "Channel 44 done\n",
-      "Channel 32 done\n",
-      "Channel 9 done\n",
-      "Channel 53 done\n",
-      "Channel 126 done\n",
-      "Channel 120 done\n",
-      "Channel 127 done\n",
-      "Channel 79 done\n",
-      "Channel 63 done\n",
-      "Channel 34 done\n",
-      "Channel 5 done\n",
-      "Channel 87 done\n",
-      "Channel 6 done\n",
-      "Channel 38 done\n",
-      "Channel 96 done\n",
-      "Channel 100 done\n",
-      "Channel 45 done\n",
+      "Channel 57 done\n",
+      "Channel 60 done\n",
+      "Channel 72 done\n",
       "Channel 43 done\n",
-      "Channel 66 done\n",
-      "Channel 35 done\n",
-      "Channel 3 done\n",
-      "Channel 122 done\n",
-      "Channel 89 done\n",
-      "Channel 99 done\n",
-      "Channel 20 done\n",
-      "Channel 83 done\n",
-      "Channel 98 done\n",
-      "Channel 114 done\n",
+      "Channel 10 done\n",
+      "Channel 106 done\n",
+      "Channel 62 done\n",
+      "Channel 44 done\n",
       "Channel 1 done\n",
+      "Channel 88 done\n",
+      "Channel 14 done\n",
+      "Channel 0 done\n",
+      "Channel 29 done\n",
+      "Channel 65 done\n",
+      "Channel 86 done\n",
+      "Channel 102 done\n",
+      "Channel 66 done\n",
+      "Channel 51 done\n",
+      "Channel 17 done\n",
+      "Channel 25 done\n",
+      "Channel 9 done\n",
+      "Channel 39 done\n",
+      "Channel 91 done\n",
       "Channel 107 done\n",
+      "Channel 56 done\n",
+      "Channel 55 done\n",
+      "Channel 18 done\n",
+      "Channel 45 done\n",
+      "Channel 128 done\n",
+      "Channel 52 done\n",
+      "Channel 23 done\n",
+      "Channel 84 done\n",
+      "Channel 114 done\n",
+      "Channel 16 done\n",
+      "Channel 19 done\n",
+      "Channel 122 done\n",
+      "Channel 110 done\n",
+      "Channel 6 done\n",
+      "Channel 96 done\n",
       "Channel 132 done\n",
-      "Channel 111 done\n",
-      "Channel 22 done\n",
+      "Channel 108 done\n",
+      "Channel 117 done\n",
+      "Channel 95 done\n",
+      "Channel 92 done\n",
+      "Channel 71 done\n",
+      "Channel 109 done\n",
+      "Channel 3 done\n",
+      "Channel 94 done\n",
+      "Channel 35 done\n",
+      "Channel 89 done\n",
+      "Channel 47 done\n",
+      "Channel 73 done\n",
+      "Channel 34 done\n",
+      "Channel 31 done\n",
+      "Channel 20 done\n",
+      "Channel 49 done\n",
+      "Channel 98 done\n",
+      "Channel 77 done\n",
+      "Channel 40 done\n",
+      "Channel 69 done\n",
+      "Channel 76 done\n",
+      "Channel 80 done\n",
+      "Channel 116 done\n",
+      "Channel 118 done\n",
+      "Channel 13 done\n",
+      "Channel 115 done\n",
+      "Channel 37 done\n",
+      "Channel 36 done\n",
+      "Channel 28 done\n",
+      "Channel 90 done\n",
+      "Channel 81 done\n",
+      "Channel 50 done\n",
       "Channel 46 done\n",
       "Channel 68 done\n",
-      "Channel 61 done\n",
-      "Channel 129 done\n",
-      "Channel 17 done\n",
-      "Channel 30 done\n",
-      "Channel 13 done\n",
       "Channel 121 done\n",
-      "Channel 62 done\n",
-      "Channel 75 done\n",
-      "Channel 51 done\n",
-      "Channel 102 done\n",
-      "Channel 18 done\n",
-      "Channel 0 done\n",
-      "Channel 112 done\n",
-      "Channel 90 done\n",
-      "Channel 7 done\n",
-      "Channel 4 done\n",
-      "Channel 91 done\n",
-      "Channel 25 done\n",
-      "Channel 123 done\n",
-      "Channel 103 done\n",
+      "Channel 22 done\n",
+      "Channel 61 done\n",
       "Channel 67 done\n",
-      "Channel 86 done\n",
-      "Channel 82 done\n",
-      "Channel 119 done\n",
-      "Channel 58 done\n",
-      "Channel 94 done\n",
-      "Channel 70 done\n",
-      "Channel 92 done\n",
-      "Channel 27 done\n",
-      "Channel 50 done\n",
-      "Channel 101 done\n",
-      "Channel 47 done\n",
-      "Channel 36 done\n",
-      "Channel 110 done\n",
-      "Channel 118 done\n",
-      "Channel 71 done\n",
-      "Channel 39 done\n",
-      "Channel 117 done\n",
-      "Channel 69 done\n",
-      "Channel 29 done\n",
-      "Channel 33 done\n",
-      "Channel 115 done\n",
-      "Channel 77 done\n",
-      "Channel 124 done\n",
-      "Channel 104 done\n",
-      "Channel 85 done\n",
-      "Channel 54 done\n",
-      "Channel 52 done\n",
-      "Channel 125 done\n",
-      "Channel 78 done\n",
-      "Channel 49 done\n",
-      "Channel 19 done\n",
-      "Channel 12 done\n",
-      "Channel 57 done\n",
-      "Channel 106 done\n",
-      "Channel 72 done\n",
-      "Channel 65 done\n",
-      "Channel 95 done\n",
-      "Channel 2 done\n",
-      "Channel 31 done\n",
-      "Channel 23 done\n",
-      "Channel 42 done\n",
-      "Channel 109 done\n",
-      "Channel 88 done\n",
-      "Channel 15 done\n",
-      "Channel 48 done\n",
-      "Channel 10 done\n",
-      "Channel 93 done\n",
-      "Channel 64 done\n",
-      "Channel 130 done\n",
-      "Channel 74 done\n",
-      "Channel 37 done\n",
-      "Channel 11 done\n",
-      "Channel 55 done\n",
-      "Channel 97 done\n",
-      "Channel 41 done\n",
-      "Channel 131 done\n",
-      "Channel 28 done\n",
-      "Channel 60 done\n",
-      "Channel 14 done\n",
-      "Channel 59 done\n",
-      "Channel 116 done\n",
       "Channel 24 done\n",
-      "Channel 76 done\n"
+      "Channel 11 done\n",
+      "Channel 53 done\n",
+      "Channel 131 done\n",
+      "Channel 100 done\n",
+      "Channel 4 done\n",
+      "Channel 30 done\n",
+      "Channel 126 done\n",
+      "Channel 7 done\n",
+      "Channel 87 done\n",
+      "Channel 38 done\n",
+      "Channel 101 done\n",
+      "Channel 99 done\n",
+      "Channel 127 done\n",
+      "Channel 104 done\n",
+      "Channel 2 done\n",
+      "Channel 33 done\n",
+      "Channel 12 done\n",
+      "Channel 27 done\n",
+      "Channel 8 done\n",
+      "Channel 42 done\n",
+      "Channel 119 done\n",
+      "Channel 120 done\n",
+      "Channel 123 done\n",
+      "Channel 21 done\n",
+      "Channel 103 done\n",
+      "Channel 82 done\n",
+      "Channel 41 done\n",
+      "Channel 15 done\n",
+      "Channel 85 done\n",
+      "Channel 111 done\n",
+      "Channel 70 done\n",
+      "Channel 79 done\n",
+      "Channel 48 done\n",
+      "Channel 63 done\n",
+      "Channel 78 done\n",
+      "Channel 64 done\n",
+      "Channel 58 done\n",
+      "Channel 130 done\n",
+      "Channel 93 done\n",
+      "Channel 97 done\n",
+      "Channel 112 done\n",
+      "Channel 54 done\n",
+      "Channel 113 done\n",
+      "Channel 129 done\n",
+      "Channel 75 done\n",
+      "Channel 83 done\n",
+      "Channel 59 done\n",
+      "Channel 125 done\n",
+      "Channel 5 done\n",
+      "Channel 105 done\n",
+      "Channel 32 done\n",
+      "Channel 124 done\n"
      ]
     }
    ],
    "source": [
-    "lda.train_on_optimal_time_windows(f_band_data, y, n_processes=20)"
+    "lda.train_on_optimal_time_windows(f_band_data, y, n_processes=20, n_channels=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "02f99735",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(133,)"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lda.dvals[:,2].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 216,
    "id": "21c07433",
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = []\n",
-    "for trial in range(lda.num_trials):\n",
-    "    temp = []\n",
-    "    for dval in lda.dvals[:,trial]:\n",
-    "        if dval >= 0:\n",
-    "            pred = 1\n",
+    "def pool_predictions(lda:LDA):\n",
+    "    predictions = []\n",
+    "    for trial in range(lda.num_trials):\n",
+    "        predictions_for_trial = []\n",
+    "        for dval in lda.dvals[:,trial]:\n",
+    "            if dval >= 0:\n",
+    "                prediction_by_channel = 1\n",
+    "            else:\n",
+    "                prediction_by_channel = 0\n",
+    "            predictions_for_trial.append(prediction_by_channel)\n",
+    "        \n",
+    "        predictions.append(predictions_for_trial)\n",
+    "\n",
+    "    predictions = np.asarray(predictions)\n",
+    "\n",
+    "    collective_predictions = []\n",
+    "\n",
+    "    for pred in predictions:\n",
+    "        if pred.mean() >= 0.5:\n",
+    "            collective_predictions.append(1)\n",
     "        else:\n",
-    "            pred = 0\n",
-    "        temp.append(pred)\n",
-    "    \n",
-    "    predictions.append(temp)\n",
+    "            collective_predictions.append(0)\n",
     "\n",
-    "predictions = np.asarray(predictions)\n",
+    "    collective_predictions = np.asarray(collective_predictions)\n",
     "\n",
-    "collective_predictions = []\n",
-    "\n",
-    "for pred in predictions:\n",
-    "    if pred.mean() >= 0.5:\n",
-    "        collective_predictions.append(1)\n",
-    "    else:\n",
-    "        collective_predictions.append(0)\n",
-    "\n",
-    "collective_predictions = np.asarray(collective_predictions)"
+    "    return predictions, collective_predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "a0c250ac",
+   "execution_count": 217,
+   "id": "c40cf176",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, collective_predictions = pool_predictions(lda)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "id": "58f049f4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6216216216216216"
+       "0.7405405405405405"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(collective_predictions == y).sum()/len(y)"
+    "(collective_predictions == y).mean()"
    ]
   },
   {
